[gd_scene load_steps=17 format=2]

[ext_resource path="res://Fonts/Coco-Sharp-Heavy-trial.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Digital Assets/Value Icons/Background.png" type="Texture" id=2]
[ext_resource path="res://Digital Assets/Gameplay board/Gameplay board.png" type="Texture" id=3]
[ext_resource path="res://Digital Assets/Button/Spin Button .png" type="Texture" id=4]
[ext_resource path="res://Slot.tscn" type="PackedScene" id=5]
[ext_resource path="res://SlotMachine.gd" type="Script" id=6]
[ext_resource path="res://Digital Assets/Button/Other 2 Button .png" type="Texture" id=7]
[ext_resource path="res://Fonts/PixeloidSansBold-RpeJo.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://Digital Assets/Value Icons/Bet Icon .png" type="Texture" id=9]
[ext_resource path="res://Digital Assets/Value Icons/Total Bet Icon .png" type="Texture" id=10]
[ext_resource path="res://Digital Assets/Value Icons/Win icon .png" type="Texture" id=11]
[ext_resource path="res://Sound/Button Press.wav" type="AudioStream" id=12]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 9
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=4]
size = 24
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="SlotMachine" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="SlotHolder" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 106.0
margin_top = 62.0
margin_right = -106.0
margin_bottom = -62.0
texture = ExtResource( 3 )
expand = true

[node name="SpinButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.753
anchor_right = 0.5
anchor_bottom = 0.753
margin_left = -81.0
margin_top = -80.8
margin_right = 81.0
margin_bottom = 81.2
texture_normal = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="SpinButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 1 )
text = "Spin"
align = 1
valign = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="SpinButton"]
stream = ExtResource( 12 )
volume_db = -10.0

[node name="Slot" parent="." instance=ExtResource( 5 )]
anchor_left = 0.175
anchor_top = -0.048
anchor_right = 0.175
anchor_bottom = -0.048
margin_left = -0.200012
margin_top = -0.199999
margin_right = -0.200012
margin_bottom = -0.199999

[node name="Slot2" parent="." instance=ExtResource( 5 )]
anchor_left = 0.323
anchor_top = -0.048
anchor_right = 0.323
anchor_bottom = -0.048
margin_left = 0.247986
margin_top = -0.199999
margin_right = 0.247986
margin_bottom = -0.199999

[node name="Slot3" parent="." instance=ExtResource( 5 )]
anchor_left = 0.479
anchor_top = -0.048
anchor_right = 0.479
anchor_bottom = -0.048
margin_left = 0.503967
margin_top = -0.199999
margin_right = 0.503967
margin_bottom = -0.199999

[node name="Slot4" parent="." instance=ExtResource( 5 )]
anchor_left = 0.636
anchor_top = -0.048
anchor_right = 0.636
anchor_bottom = -0.048
margin_left = -0.264038
margin_top = -0.199999
margin_right = -0.264038
margin_bottom = -0.199999

[node name="Slot5" parent="." instance=ExtResource( 5 )]
anchor_left = 0.792
anchor_top = -0.048
anchor_right = 0.792
anchor_bottom = -0.048
margin_left = -0.00805664
margin_top = -0.199999
margin_right = -0.00805664
margin_bottom = -0.199999

[node name="AutoSpinButton" type="TextureButton" parent="."]
anchor_left = 0.687
anchor_top = 0.75
anchor_right = 0.687
anchor_bottom = 0.75
margin_left = -40.488
margin_top = -41.0
margin_right = 41.512
margin_bottom = 41.0
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="AutoSpinButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Auto
Spin"
align = 1
valign = 1

[node name="MaxBetButton" type="TextureButton" parent="."]
anchor_left = 0.812
anchor_top = 0.748
anchor_right = 0.812
anchor_bottom = 0.748
margin_left = -40.488
margin_top = -40.8
margin_right = 41.512
margin_bottom = 41.2
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="MaxBetButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = "Max
Bet"
align = 1
valign = 1

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Currency" type="Control" parent="."]
anchor_left = 0.256
anchor_top = 0.749
anchor_right = 0.256
anchor_bottom = 0.749
margin_left = -140.144
margin_top = -39.4
margin_right = 139.856
margin_bottom = 39.6
rect_pivot_offset = Vector2( -106, 30 )

[node name="Bet" type="TextureRect" parent="Currency"]
margin_right = 117.0
margin_bottom = 35.0
texture = ExtResource( 9 )
expand = true

[node name="Label" type="Label" parent="Currency/Bet"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 9.0
margin_top = 5.0
margin_right = -7.0
margin_bottom = -5.0
custom_fonts/font = SubResource( 3 )
text = "Bet:"
valign = 1
autowrap = true

[node name="TotalBet" type="TextureRect" parent="Currency"]
margin_left = 136.0
margin_right = 284.0
margin_bottom = 35.0
texture = ExtResource( 10 )
expand = true

[node name="Label" type="Label" parent="Currency/TotalBet"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 5.0
margin_right = -7.0
margin_bottom = -5.0
custom_fonts/font = SubResource( 3 )
text = "Total Bet:"
valign = 1
autowrap = true

[node name="Win" type="TextureRect" parent="Currency"]
margin_left = -1.0
margin_top = 41.0
margin_right = 285.0
margin_bottom = 82.0
texture = ExtResource( 11 )
expand = true

[node name="Label" type="Label" parent="Currency/Win"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 11.0
margin_top = 5.0
margin_right = -73.0
margin_bottom = -5.0
custom_fonts/font = SubResource( 3 )
text = "Win:"
valign = 1

[node name="IncreaseBet" type="Button" parent="."]
margin_left = 388.0
margin_top = 410.0
margin_right = 413.0
margin_bottom = 445.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0, 0.764706, 0.764706, 1 )
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "+"
flat = true

[node name="DecreaseBet" type="Button" parent="."]
margin_left = 389.0
margin_top = 428.0
margin_right = 412.0
margin_bottom = 463.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
custom_colors/font_color_hover = Color( 0, 0.764706, 0.764706, 1 )
custom_fonts/font = SubResource( 4 )
enabled_focus_mode = 0
text = "-"
flat = true

[connection signal="pressed" from="SpinButton" to="." method="_on_SpinButton_pressed"]
[connection signal="pressed" from="AutoSpinButton" to="." method="_on_AutoSpinButton_pressed"]
[connection signal="pressed" from="MaxBetButton" to="." method="_on_MaxBetButton_pressed"]
[connection signal="pressed" from="IncreaseBet" to="." method="_on_IncreaseBet_pressed"]
[connection signal="pressed" from="DecreaseBet" to="." method="_on_DecreaseBet_pressed"]
